--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,5 +1,5 @@
 {% if post.read_time %}
-  {% assign words = post.content | strip_html | number_of_words %}
+  {% assign words = post.excerpt | strip_html | number_of_words %}
 {% elsif page.read_time %}
   {% assign words = page.content | strip_html | number_of_words %}
 {% endif %}
