--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -19,6 +19,10 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 class="page__title">{{ page.title }}</h1>
     {% endunless %}
-    {{ content }}
+    {% if page.layout != "post" %}
+  <!-- 仅在单篇文章页显示正文 -->
+  {{ content }}
+{% endif %}
+
   </div>
 </div>
