--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -17,7 +17,7 @@ layout: default
 
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
-      <h1 class="page__title">{{ page.title }}</h1>
+    <h1 class="page__title" style="text-transform: none;">{{ page.title }}</h1>
     {% endunless %}
     {% if page.layout != "post" %}
   <!-- 仅在单篇文章页显示正文 -->
